Added Category and Products pages

--- a/FPSInventory/FPSInventory/Views/Employee/Index.cshtml
+++ b/FPSInventory/FPSInventory/Views/Employee/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table id="tableFPS">
     <thead>
         <tr>
             <th>
