--- a/FPSInventory/FPSInventory/Views/Shared/_Layout.cshtml
+++ b/FPSInventory/FPSInventory/Views/Shared/_Layout.cshtml
@@ -1,9 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FPSInventory</title>
+
+    <link rel="icon" type="image/ico" href="~/images/iconlogo.png">
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -13,47 +19,80 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/mainstyle.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FPSInventory</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Users</a>
-                        </li>
-                    </ul>
-                </div>
+        <hgroup>
+            <h2><img src="~/images/iconlogo.png"> FPS Inventory</h2>
+            <h3><button class="options">More</button></h3>
+        </hgroup>
+
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <div class="user">
+                <img src="images/iconlogo.png">
+                <p>@User.Identity.Name<br><i>?</i></p>
             </div>
+        }
+        else
+        {
+
+        }
+        <nav id="nav_menu">
+            <ul>
+                <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                <li>
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    <!--<ul>
+            <li><a>Top</a></li>
+            <li><a>Bottom</a></li>
+            <li>
+                <a href="underconstruction.html">Accessories</a>
+                <ul>
+                    <li><a href="underconstruction.html">Items</a></li>
+                    <li><a href="underconstruction.html">Colours</a></li>
+                </ul>
+            </li>
+        </ul>-->
+                </li>
+                <li><a asp-area="" asp-controller="Employee" asp-action="Index">Employees</a></li>
+                <li><a asp-area="" asp-controller="Product" asp-action="Index">Products</a></li>
+                <partial name="_LoginPartial" />
+            </ul>
         </nav>
     </header>
-    <div class="container">
+
+    <section id="page">
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
+        <aside id="sidebarA">
+            <h2>Lorem Sidebar</h2>
+            <div class="line"></div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Sed vulputate mi sit amet mauris commodo quis imperdiet
+                massa. Egestas congue quisque egestas diam. Posuere urna nec
+                tincidunt praesent. Aenean sed adipiscing diam donec
+                adipiscing tristique risus nec feugiat. Cras adipiscing
+                enim eu turpis egestas pretium aenean pharetra magna.
+                Vulputate sapien nec sagittis aliquam malesuada bibendum.
+                Sem et tortor consequat id porta nibh. Nam libero justo
+                laoreet sit amet cursus sit amet. Arcu cursus vitae congue
+                mauris rhoncus aenean vel.
+            </p>
+        </aside>
+        <main id="twocolumns">
             @RenderBody()
         </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - FPSInventory - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    </section>
+    <footer class="footer">
+        <div class="line"></div>
+        <p>&copy; 2020 - FPSInventory - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
+        <p><a title="RETURN TO TOP" href="#" class="go_up">TOP &uparrow;</a></p>
     </footer>
 
     <environment include="Development">
