--- a/FPSInventory/FPSInventory/Views/Category/Index.cshtml
+++ b/FPSInventory/FPSInventory/Views/Category/Index.cshtml
@@ -22,11 +22,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Namecategory)
+                <a asp-action="Index" asp-controller="Product" asp-route-id="@item.Idcategory">
+                    @Html.DisplayFor(modelItem => item.Namecategory)
+                </a> 
+
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Idcategory">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Idcategory">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Idcategory">Delete</a>
             </td>
         </tr>
