Reports included, fixed login screen

--- a/FPSInventory/FPSInventory/Views/City/Index.cshtml
+++ b/FPSInventory/FPSInventory/Views/City/Index.cshtml
@@ -31,9 +31,12 @@
                 @Html.DisplayFor(modelItem => item.Province)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Idcity" class="btn btn-success btn-sm" role="button">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.Idcity" class="btn btn-info btn-sm" role="button">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.Idcity" class="btn btn-danger btn-sm" role="button">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Idcity"
+                   class="btn btn-success btn-sm" role="button"
+                   title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+                <a asp-action="Delete" asp-route-id="@item.Idcity"
+                   class="btn btn-danger btn-sm" role="button"
+                   title="Delete File"><span class="glyphicon glyphicon-trash"></span></a>
             </td>
         </tr>
 }
