--- a/FPSInventory/FPSInventory/Views/Category/Index.cshtml
+++ b/FPSInventory/FPSInventory/Views/Category/Index.cshtml
@@ -28,8 +28,12 @@
 
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Idcategory" class="btn btn-success btn-sm" role="button">Edit</a>
-                <a asp-action="Delete" asp-route-id="@item.Idcategory" class="btn btn-danger btn-sm" role="button">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Idcategory"
+                   class="btn btn-success btn-sm" role="button"
+                   title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+                <a asp-action="Delete" asp-route-id="@item.Idcategory"
+                   class="btn btn-danger btn-sm" role="button"
+                   title="Delete File"><span class="glyphicon glyphicon-trash"></span></a>
             </td>
         </tr>
 }
