--- a/FPSInventory/FPSInventory/Views/CustomerOrder/Index.cshtml
+++ b/FPSInventory/FPSInventory/Views/CustomerOrder/Index.cshtml
@@ -22,20 +22,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdStoreNavigation.Namestore)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdcustomerOrder" class="btn btn-success btn-sm" role="button">Edit</a>
-                <a asp-action="Index" asp-controller="CustomerItem" asp-route-id="@item.IdcustomerOrder" class="btn btn-info btn-sm" role="button">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.IdcustomerOrder" class="btn btn-danger btn-sm" role="button">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IdStoreNavigation.Namestore)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.IdcustomerOrder"
+                       class="btn btn-success btn-sm" role="button"
+                       title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+                    <a asp-action="Details" asp-controller="CustomerItem" asp-route-id="@item.IdcustomerOrder"
+                       class="btn btn-info btn-sm" role="button"
+                       title="Details"><span class="glyphicon glyphicon-folder-open"></span></a>
+                    <a asp-action="Delete" asp-route-id="@item.IdcustomerOrder"
+                       class="btn btn-danger btn-sm" role="button"
+                       title="Delete File"><span class="glyphicon glyphicon-trash"></span></a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
