--- a/FPSInventory/FPSInventory/Views/InItemOrder/Index.cshtml
+++ b/FPSInventory/FPSInventory/Views/InItemOrder/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 <div class="line"></div>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add Product to Order</a>
 </p>
 <table id="tableFPS">
     <thead>
@@ -38,9 +38,12 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdinItemOrder" class="btn btn-success btn-sm" role="button">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.IdinItemOrder" class="btn btn-info btn-sm" role="button">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.IdinItemOrder" class="btn btn-danger btn-sm" role="button">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdinItemOrder"
+                   class="btn btn-success btn-sm" role="button"
+                   title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+                <a asp-action="Delete" asp-route-id="@item.IdinItemOrder"
+                   class="btn btn-danger btn-sm" role="button"
+                   title="Delete File"><span class="glyphicon glyphicon-trash"></span></a>
             </td>
         </tr>
 }
