--- a/FPSInventory/FPSInventory/Views/OutOrder/Create.cshtml
+++ b/FPSInventory/FPSInventory/Views/OutOrder/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model FPSInventory.Models.OutOrder
+@using Microsoft.AspNetCore.Http
 
 @{
     ViewData["Title"] = "Create a New Out Order";
@@ -20,8 +21,7 @@
                 <select asp-for="IdStore" class="form-control" asp-items="ViewBag.IdStore"></select>
             </div>
             <div class="form-group">
-                <label asp-for="IdEmployee" class="control-label"></label>
-                <select asp-for="IdEmployee" class="form-control" asp-items="ViewBag.IdEmployee"></select>
+                <input type="hidden" asp-for="IdEmployee" value="@Context.Session.GetString("employeeID")" />
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
