--- a/FPSInventory/FPSInventory/Views/OutOrder/Edit.cshtml
+++ b/FPSInventory/FPSInventory/Views/OutOrder/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model FPSInventory.Models.OutOrder
+@using Microsoft.AspNetCore.Http
 
 @{
     ViewData["Title"] = "Edit";
@@ -24,8 +25,7 @@
                 <span asp-validation-for="IdStore" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdEmployee" class="control-label"></label>
-                <select asp-for="IdEmployee" class="form-control" asp-items="ViewBag.IdEmployee"></select>
+                <input type="hidden" asp-for="IdEmployee" value="@Context.Session.GetString("employeeID")" />
                 <span asp-validation-for="IdEmployee" class="text-danger"></span>
             </div>
             <div class="form-group">
